// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scan Components - Snapshots > ScanContent - Snapshots > matches snapshot for default ScanContent 1`] = `
<div
  class="mx-auto w-full flex-col container hidden md:flex"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
    data-testid="container"
  >
    <div
      data-size="large"
      data-testid="page-title"
    >
      Scan 
      <span
        class="text-brand"
      >
        QR Code.
      </span>
    </div>
    <h2
      class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
    >
      Open Pubky Ring, create a pubky, and scan the QR.
    </h2>
  </div>
  <div
    data-layout="column"
    data-testid="content-card"
  >
    <div
      class="mx-auto w-full flex-col flex items-center justify-center gap-4"
      data-testid="container"
    >
      <div
        class="relative flex h-[220px] w-[220px] items-center justify-center rounded-lg bg-foreground p-4"
      >
        <div
          class="mx-auto w-full flex-col flex items-center gap-2"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-qr-code h-8 w-8 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="5"
              rx="1"
              width="5"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="5"
              x="16"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="5"
              x="3"
              y="16"
            />
            <path
              d="M21 16h-3a2 2 0 0 0-2 2v3"
            />
            <path
              d="M21 21v.01"
            />
            <path
              d="M12 7v3a2 2 0 0 1-2 2H7"
            />
            <path
              d="M3 12h.01"
            />
            <path
              d="M12 3h.01"
            />
            <path
              d="M12 16v.01"
            />
            <path
              d="M16 12h1"
            />
            <path
              d="M21 12v.01"
            />
            <path
              d="M12 21v-1"
            />
          </svg>
          <small
            class="text-sm font-semibold text-muted-foreground"
            data-testid="typography"
          >
            Expired
          </small>
        </div>
      </div>
      <p
        class="text-lg font-semibold tracking-widest text-brand"
        data-testid="typography"
      >
        A9KM-7MJP-ERM9
      </p>
    </div>
  </div>
</div>
`;

exports[`Scan Components - Snapshots > ScanFooter - Snapshots > matches snapshot for default ScanFooter 1`] = `
<p
  class="leading-light text-sm font-medium text-muted-foreground opacity-80 py-6"
  data-testid="typography"
>
  Use ,[object Object], or any other 
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="https://pubky.org"
    rel="noopener noreferrer"
    target="_blank"
  >
    Pubky Core
  </a>
  –powered keychain.
</p>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for desktop ScanHeader 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
>
  <div
    data-size="large"
    data-testid="page-title"
  >
    Scan 
    <span
      class="text-brand"
    >
      QR Code.
    </span>
  </div>
  <h2
    class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
  >
    Open Pubky Ring, create a pubky, and scan the QR.
  </h2>
</div>
`;

exports[`Scan Components - Snapshots > ScanHeader - Snapshots > matches snapshot for mobile ScanHeader 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
>
  <div
    data-size="large"
    data-testid="page-title"
  >
    Tap to 
    <span
      class="text-brand"
    >
      Authorize.
    </span>
  </div>
  <h2
    class="text-xl leading-normal font-light text-muted-foreground lg:text-2xl"
  >
    Open Pubky Ring, create a pubky, and scan the QR.
  </h2>
</div>
`;

exports[`Scan Components - Snapshots > ScanNavigation - Snapshots > matches snapshot for default ScanNavigation 1`] = `
<div
  data-testid="buttons-navigation"
>
  <button
    data-testid="back-button"
  >
    Back
  </button>
</div>
`;
